# 3dr1-vsibench

./: LICENSE  README.md  pyproject.toml
3D-R1/: README.md  __init__.py  box_intersection.c  captioner.py  config.py  criterion.py  depth_encoder.py  detector.py  dynamic_view_selection.py  engine.py  engine_rl.py  evaluate_cold.py  evaluate_densecap.py  evaluate_dialogue.py  evaluate_qa.py  helpers.py  image_encoder.py  install_pytorch3d.sh  main.py  main_rl.py  model_general.py  point_renderer.py  position_embedding.py  rl_config.py  synthesize_scene30K.sh  three_dr1_bridge.py  train.generalist.sh  train.rl_complete.sh  train.rl_unified.sh  transformer.py  view_selection.py  vote_query.py
3dr1-vsibench/: README.md
thinking-in-space/lmms_eval/: __init__.py  __main__.py  utils.py
thinking-in-space/lmms_eval/api/: model.py  registry.py  task.py
thinking-in-space/lmms_eval/models/: __init__.py  three_d_r1.py
thinking-in-space/lmms_eval/tasks/: __init__.py
thinking-in-space/lmms_eval/tasks/vsibench/: config.py  utils.py
thinking-in-space/thinking_in_space/: __init__.py
three_dr1_bridge/: __init__.py
tools/: video_to_multiview.py  vsibench_debug.py
