[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "three-dr1-vsibench"
version = "0.1.0"
description = "Helper utilities that connect 3D-R1 to VSI-Bench via lmms-eval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "3D-R1 Integration Team"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AIGeeksGroup/3D-R1"

[tool.setuptools]
packages = ["three_dr1_bridge"]
